--- a/src/sass/blocks/layout/_app.scss
+++ b/src/sass/blocks/layout/_app.scss
@@ -7,7 +7,6 @@
 
     position: relative;
     height: 100%;
-    overflow: hidden;
 
     // disable text selection
     user-select: none;
@@ -30,7 +29,6 @@
         }
 
         @include respond-to(not-lg) {
-            will-change: transform;
             transform: translateX(-100%);
         }
         @include respond-to(lg) {
@@ -48,10 +46,8 @@
         bottom: 0;
 
         @include respond-to(not-lg) {
-            will-change: transform;
-
             &:after {
-                display: none;
+                display: block;
                 content: '';
                 position: absolute;
                 top: 0;
@@ -59,6 +55,7 @@
                 background: rgba(0,0,0,0.2);
                 width: 100%;
                 height: 100%;
+                transform: translateX(110%); // translate offscreen
             }
         }
         @include respond-to(lg) {
@@ -91,27 +88,21 @@
     // Modifier to open sidebar
     &--show-aside {
         @include respond-to(not-lg) {
-            .app__aside {
+            transform: translateX($aside-width);
+            .app__container:after {
                 transform: none;
-            }
-            .app__container {
-                transform: translateX($aside-width);
-                &:after {
-                    display: block;
-                }
             }
         }
     }
 
     // Animation
     @include respond-to(not-lg) {
-        .app__aside {
+        will-change: transform;
+        transform-style: preserve3d;
+        transition: transform 0.15s ease-out;
+        .app__container:after {
             will-change: transform;
-            transition: transform 0.15s ease-out;
-        }
-        .app__container {
-            will-change: transform;
-            transition: transform 0.15s ease-out;
+            transform-style: preserve3d;
         }
     }
 }
